--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,16 @@ categories = []  # https://crates.io/category_slugs
 name = "main"
 harness = false
 
+[features]
+traced-error = ["tracing-error/traced-error"]
+
 [dependencies]
 color-eyre = "0"
 tracing = { version = "0", features = ["attributes"] }
 tracing-subscriber = "0"
 tracing-error = "0"
 structopt = "0"
+thiserror = "1"
 # serde = { version = "1", features = ["derive"] }
 # config = { version = "0", features = ["hjson"] }  # also supports ini, yaml
 # termcolor = "1"
